--- a/Blazor WebAssembly/Pages/ProductDetails.razor
+++ b/Blazor WebAssembly/Pages/ProductDetails.razor
@@ -8,6 +8,9 @@
 @if (Product != null)
 {
     <PageTitle>@Product.Name</PageTitle>
+    <HeadContent>
+        <meta name="description" content="@Product.Name" />
+    </HeadContent>
 }
 
 @if (Product == null)
@@ -32,7 +35,7 @@ else
                     <p>اقلام موجود در سبد خرید : @shoppingCartService.Count() می باشد</p>
                 }
                 <div class="col-4">
-                    <input @bind="Quantity" type="number" placeholder="تعداد؟" class="form-control" />
+                    <input @bind="Quantity" @bind:event="oninput" type="number" placeholder="تعداد؟" class="form-control" />
                 </div>
                 <div class="col-3">
                     <button class="btn btn-outline-primary" @onclick="AddToCart">
