--- a/Blazor WebAssembly/Shared/NavMenu.razor
+++ b/Blazor WebAssembly/Shared/NavMenu.razor
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <NavLink class="nav-link" href="/">خانه</NavLink>
+                <NavLink class="nav-link" Match="NavLinkMatch.All" href="/">خانه</NavLink>
             </li>
             <li class="nav-item active">
-                <NavLink class="nav-link" href="/cart">سبد خرید</NavLink>
+                <NavLink class="nav-link" Match="NavLinkMatch.All" href="/cart">سبد خرید</NavLink>
             </li>
         </ul>
     </div>
