Added Blazor Css

--- a/Blazor WebAssembly/Shared/NavMenu.razor
+++ b/Blazor WebAssembly/Shared/NavMenu.razor
@@ -9,9 +9,10 @@
             <li class="nav-item active">
                 <NavLink class="nav-link" Match="NavLinkMatch.All" href="/">خانه</NavLink>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <NavLink class="nav-link" Match="NavLinkMatch.All" href="/cart">سبد خرید</NavLink>
             </li>
         </ul>
+
     </div>
 </nav>
