--- a/Blazor WebAssembly/Shared/ProductItem.razor
+++ b/Blazor WebAssembly/Shared/ProductItem.razor
@@ -6,10 +6,10 @@
 <div class="card col-3 m-2" style="width: 18rem;padding:0">
     <img src="/Images/@Product?.Image" style="width:100%" class="card-img-top" alt="...">
     <div class="card-body">
-        <a href="@Product.FullUrl">
-            <h5 class="card-title">@Product.Name</h5>
+        <a href="@Product?.FullUrl">
+            <h5 class="card-title">@Product?.Name</h5>
         </a>
-        <p class="card-text">قیمت : @Product.Price</p>
+        <p class="card-text">قیمت : @Product?.Price</p>
         <div>
             <input @bind="Quantity" type="number" placeholder="تعداد؟" class="form-control" />
 
