--- a/Blazor WebAssembly/Shared/MainLayout.razor
+++ b/Blazor WebAssembly/Shared/MainLayout.razor
@@ -1,7 +1,26 @@
-﻿@inherits LayoutComponentBase
+﻿@using MyBlazor.Libraries.ShoppingCart;
+@using MyBlazor.Libraries.ShoppingCart.Models;
+@inherits LayoutComponentBase
+@inject IShoppingCartService shoppingCartService
 
+<CascadingValue Value="@shopingCartCountModel" Name="ShopingCartCountModel">
 <Header />
 <div class="container">
     @Body
 </div>
+</CascadingValue>
 <Footer />
+
+@code{
+    ShopingCartCountModel? shopingCartCountModel { get; set; }
+
+    protected override void OnInitialized()
+    {
+        shopingCartCountModel = new ShopingCartCountModel();
+
+        shopingCartCountModel.Count = shoppingCartService.Count();
+
+        base.OnInitialized();
+    }
+
+}
