--- a/Blazor WebAssembly/Shared/NavMenu.razor
+++ b/Blazor WebAssembly/Shared/NavMenu.razor
@@ -1,4 +1,8 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+﻿@using MyBlazor.Libraries.ShoppingCart.Models;
+@using MyBlazor.Libraries.ShoppingCart;
+@inject IShoppingCartService shoppingCartService
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">فروشگاه تاپ لرن</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,9 +14,34 @@
                 <NavLink class="nav-link" Match="NavLinkMatch.All" href="/">خانه</NavLink>
             </li>
             <li class="nav-item">
-                <NavLink class="nav-link" Match="NavLinkMatch.All" href="/cart">سبد خرید</NavLink>
+                <NavLink class="nav-link" Match="NavLinkMatch.All" href="/cart">سبد خرید(
+                <span>
+                        @if (shopingCartCountModel != null)
+                        {
+                            @shopingCartCountModel.Count
+                        }
+                    </span>)</NavLink>
             </li>
         </ul>
 
     </div>
 </nav>
+
+@code{
+    [CascadingParameter(Name = "ShopingCartCountModel")]
+    private ShopingCartCountModel? shopingCartCountModel { get; set; }
+
+    protected override void OnInitialized()
+    {
+        if (shopingCartCountModel != null)
+        {
+            shopingCartCountModel.CountChange += () =>
+            {
+                shopingCartCountModel.Count = shoppingCartService.Count();
+                StateHasChanged();
+            };
+        }
+        base.OnInitialized();
+    }
+
+}
