--- a/Blazor WebAssembly/Shared/NavMenu.razor
+++ b/Blazor WebAssembly/Shared/NavMenu.razor
@@ -1,9 +1,13 @@
 ﻿@using MyBlazor.Libraries.ShoppingCart.Models;
 @using MyBlazor.Libraries.ShoppingCart;
+@inject IConfiguration Configuration
 @inject IShoppingCartService shoppingCartService
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">فروشگاه تاپ لرن</a>
+    <a class="navbar-brand" href="#">
+        <img style="max-width:50px" src="/@Configuration["Sitelogo"]" />
+        @Configuration["Title"]
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
