--- a/Blazor WebAssembly/Shared/Ads.razor
+++ b/Blazor WebAssembly/Shared/Ads.razor
@@ -7,7 +7,7 @@
                 <div class="mb-1 text-body-secondary">@DateTime.Now.ToShortDateString()</div>
                 @if (!string.IsNullOrEmpty(Description))
                 {
-                    <p class="mb-auto">@Description</p>
+                    <p class="mb-auto" style="text-align:justify">@Description</p>
                 }
                 <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
                     مشاهده بیشتر
