--- a/Blazor WebAssembly/Shared/Ads.razor
+++ b/Blazor WebAssembly/Shared/Ads.razor
@@ -14,7 +14,7 @@
                 </a>
             </div>
             <div class="col-auto d-none d-lg-block">
-                <img src="@Image" />
+                <img src="@Image" style="width:100%" class="card-img-top" alt="@Title" />
             </div>
         </div>
     </div>
