--- a/Blazor WebAssembly/Shared/Template/TableTemplate.razor
+++ b/Blazor WebAssembly/Shared/Template/TableTemplate.razor
@@ -1,4 +1,5 @@
-﻿@using Blazor_WebAssembly.Components
+﻿@using Blazor_WebAssembly.Components;
+
 
 <table class="table table-bordered table-striped">
     @if (HeaderNames?.Any() ?? false)
