--- a/Blazor WebAssembly/Pages/ProductDetails.razor
+++ b/Blazor WebAssembly/Pages/ProductDetails.razor
@@ -31,9 +31,9 @@ else
             <hr />
             <p class="text-success">قیمت : @Product.Price $</p>
             <div class="row m-3">
-                @if (shoppingCartService.Count() > 0)
+                @if (shopingCartCountModel?.Count > 0)
                 {
-                    <p>اقلام موجود در سبد خرید : @shoppingCartService.Count() می باشد</p>
+                    <p>اقلام موجود در سبد خرید : @shopingCartCountModel?.Count می باشد</p>
                 }
 
                 <EditForm Model="productAddToCartModel" OnValidSubmit="AddToCart">
@@ -124,6 +124,7 @@ else
         if (Product != null)
         {
             shoppingCartService.AddProduct(Product, productAddToCartModel.Quantity ?? 1);
+
             productAddToCartModel.Quantity = null;
 
             if (shopingCartCountModel != null)
